# lifetime_abstractions

./: Cargo.toml  README.md
examples/: streaming_iterator.rs
src/: lib.rs
