[package]
name = "lifetime_abstractions"
version = "0.1.0"

description = """\
    Lifetime abstractions are types with a bound placeholder lifetime with \
    type-level operations to replace placeholders with different lifetimes. \
    Can be used to emulate lifetime parameter only GATs."""
keywords = ["lifetime", "typelevel", "GAT", "GATs"]
categories = ["no-std", "rust-patterns", "memory-management"]
repository = "https://github.com/jix/lifetime_abstractions"

license = "0BSD"

edition = "2018"
rust-version = "1.46"

[dependencies]
